--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
+@plugin "daisyui" {
+  themes: light, dark;
+}
+
 @theme {
   --font-poppins: "Poppins", sans-serif;
-  --color-primary: #fff8f8;
-  --color-secondary: #e9dfc3;
-  --color-blue: #0118d8;
-  --color-lightblue: #1b56fd;
 }
 
 @layer base {
@@ -15,10 +15,15 @@
     letter-spacing: 1px;
   }
 
+  html,
+  body {
+    background-color: var(--color-base-200);
+  }
+
   body {
     position: relative;
     height: 100vh;
-    background: var(--color-primary);
+    overflow-y: auto;
   }
 
   h1 {
