--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@
 
   html,
   body {
-    background-color: var(--color-base-200);
+    background-color: var(--color-base-200) !important;
   }
 
   body {
